xcgui.nim


proc XAdTable_SetItemTextEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                            pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdTable_SetItemTextEx", dynlib: xcgui, discardable.}

proc XAdTable_SetItemInt*(hAdapter: HXCGUI; iItem: cint; iColumn: cint; nValue: cint): BOOL {.
    cdecl, importc: "XAdTable_SetItemInt", dynlib: xcgui, discardable.}

proc XAdTable_SetItemIntEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                           nValue: cint): BOOL {.cdecl,
    importc: "XAdTable_SetItemIntEx", dynlib: xcgui, discardable.}

proc XAdTable_SetItemFloat*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                           nValue: cfloat): BOOL {.cdecl,
    importc: "XAdTable_SetItemFloat", dynlib: xcgui, discardable.}

proc XAdTable_SetItemFloatEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                             nValue: cfloat): BOOL {.cdecl,
    importc: "XAdTable_SetItemFloatEx", dynlib: xcgui, discardable.}

proc XAdTable_SetItemImage*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                           hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdTable_SetItemImage", dynlib: xcgui, discardable.}

proc XAdTable_SetItemImageEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                             hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdTable_SetItemImageEx", dynlib: xcgui, discardable.}

proc XAdTable_DeleteItem*(hAdapter: HXCGUI; iItem: cint): BOOL {.cdecl,
    importc: "XAdTable_DeleteItem", dynlib: xcgui, discardable.}

proc XAdTable_DeleteItemEx*(hAdapter: HXCGUI; iItem: cint; nCount: cint): BOOL {.cdecl,
    importc: "XAdTable_DeleteItemEx", dynlib: xcgui, discardable.}

proc XAdTable_DeleteItemAll*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdTable_DeleteItemAll", dynlib: xcgui, discardable.}

proc XAdTable_DeleteColumnAll*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdTable_DeleteColumnAll", dynlib: xcgui, discardable.}

proc XAdTable_GetCount*(hAdapter: HXCGUI): cint {.cdecl,
    importc: "XAdTable_GetCount", dynlib: xcgui, discardable.}

proc XAdTable_GetCountColumn*(hAdapter: HXCGUI): cint {.cdecl,
    importc: "XAdTable_GetCountColumn", dynlib: xcgui, discardable.}

proc XAdTable_GetItemText*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                          pOut: ptr WCHAR; nOutLen: cint): BOOL {.cdecl,
    importc: "XAdTable_GetItemText", dynlib: xcgui, discardable.}

proc XAdTable_GetItemTextEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                            pOut: ptr WCHAR; nOutLen: cint): BOOL {.cdecl,
    importc: "XAdTable_GetItemTextEx", dynlib: xcgui, discardable.}

proc XAdTable_GetItemImage*(hAdapter: HXCGUI; iItem: cint; iColumn: cint): HIMAGE {.
    cdecl, importc: "XAdTable_GetItemImage", dynlib: xcgui, discardable.}

proc XAdTable_GetItemImageEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR): HIMAGE {.
    cdecl, importc: "XAdTable_GetItemImageEx", dynlib: xcgui, discardable.}

proc XAdTable_GetItemInt*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                         pOutValue: ptr cint): BOOL {.cdecl,
    importc: "XAdTable_GetItemInt", dynlib: xcgui, discardable.}

proc XAdTable_GetItemIntEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                           pOutValue: ptr cint): BOOL {.cdecl,
    importc: "XAdTable_GetItemIntEx", dynlib: xcgui, discardable.}

proc XAdTable_GetItemFloat*(hAdapter: HXCGUI; iItem: cint; iColumn: cint;
                           pOutValue: ptr cfloat): BOOL {.cdecl,
    importc: "XAdTable_GetItemFloat", dynlib: xcgui, discardable.}

proc XAdTable_GetItemFloatEx*(hAdapter: HXCGUI; iItem: cint; pName: ptr WCHAR;
                             pOutValue: ptr cfloat): BOOL {.cdecl,
    importc: "XAdTable_GetItemFloatEx", dynlib: xcgui, discardable.}

proc XAdTree_Create*(): HXCGUI {.cdecl, importc: "XAdTree_Create", dynlib: xcgui, discardable.}

proc XAdTree_AddColumn*(hAdapter: HXCGUI; pName: ptr WCHAR): cint {.cdecl,
    importc: "XAdTree_AddColumn", dynlib: xcgui, discardable.}

proc XAdTree_SetColumn*(hAdapter: HXCGUI; pColName: ptr WCHAR): cint {.cdecl,
    importc: "XAdTree_SetColumn", dynlib: xcgui, discardable.}

proc XAdTree_InsertItemText*(hAdapter: HXCGUI; pValue: ptr WCHAR;
                            nParentID: cint = XC_ID_ROOT;
                            insertID: cint = XC_ID_LAST): cint {.cdecl,
    importc: "XAdTree_InsertItemText", dynlib: xcgui, discardable.}

proc XAdTree_InsertItemTextEx*(hAdapter: HXCGUI; pName: ptr WCHAR;
                              pValue: ptr WCHAR; nParentID: cint = XC_ID_ROOT;
                              insertID: cint = XC_ID_LAST): cint {.cdecl,
    importc: "XAdTree_InsertItemTextEx", dynlib: xcgui, discardable.}

proc XAdTree_InsertItemImage*(hAdapter: HXCGUI; hImage: HIMAGE;
                             nParentID: cint = XC_ID_ROOT;
                             insertID: cint = XC_ID_LAST): cint {.cdecl,
    importc: "XAdTree_InsertItemImage", dynlib: xcgui, discardable.}

proc XAdTree_InsertItemImageEx*(hAdapter: HXCGUI; pName: ptr WCHAR; hImage: HIMAGE;
                               nParentID: cint = XC_ID_ROOT;
                               insertID: cint = XC_ID_LAST): cint {.cdecl,
    importc: "XAdTree_InsertItemImageEx", dynlib: xcgui, discardable.}

proc XAdTree_GetCount*(hAdapter: HXCGUI): cint {.cdecl, importc: "XAdTree_GetCount",
    dynlib: xcgui, discardable.}

proc XAdTree_GetCountColumn*(hAdapter: HXCGUI): cint {.cdecl,
    importc: "XAdTree_GetCountColumn", dynlib: xcgui, discardable.}

proc XAdTree_SetItemText*(hAdapter: HXCGUI; nID: cint; iColumn: cint;
                         pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdTree_SetItemText", dynlib: xcgui, discardable.}

proc XAdTree_SetItemTextEx*(hAdapter: HXCGUI; nID: cint; pName: ptr WCHAR;
                           pValue: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdTree_SetItemTextEx", dynlib: xcgui, discardable.}

proc XAdTree_SetItemImage*(hAdapter: HXCGUI; nID: cint; iColumn: cint; hImage: HIMAGE): BOOL {.
    cdecl, importc: "XAdTree_SetItemImage", dynlib: xcgui, discardable.}

proc XAdTree_SetItemImageEx*(hAdapter: HXCGUI; nID: cint; pName: ptr WCHAR;
                            hImage: HIMAGE): BOOL {.cdecl,
    importc: "XAdTree_SetItemImageEx", dynlib: xcgui, discardable.}

proc XAdTree_GetItemText*(hAdapter: HXCGUI; nID: cint; iColumn: cint;
                         pOut: ptr WCHAR; nOutLen: cint): BOOL {.cdecl,
    importc: "XAdTree_GetItemText", dynlib: xcgui, discardable.}

proc XAdTree_GetItemImage*(hAdapter: HXCGUI; nID: cint; iColumn: cint): HIMAGE {.cdecl,
    importc: "XAdTree_GetItemImage", dynlib: xcgui, discardable.}

proc XAdTree_GetItemTextEx*(hAdapter: HXCGUI; nID: cint; pName: ptr WCHAR;
                           pOut: ptr WCHAR; nOutLen: cint): BOOL {.cdecl,
    importc: "XAdTree_GetItemTextEx", dynlib: xcgui, discardable.}

proc XAdTree_GetItemImageEx*(hAdapter: HXCGUI; nID: cint; pName: ptr WCHAR): HIMAGE {.
    cdecl, importc: "XAdTree_GetItemImageEx", dynlib: xcgui, discardable.}

proc XAdTree_DeleteItem*(hAdapter: HXCGUI; nID: cint): BOOL {.cdecl,
    importc: "XAdTree_DeleteItem", dynlib: xcgui, discardable.}

proc XAdTree_DeleteItemAll*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdTree_DeleteItemAll", dynlib: xcgui, discardable.}

proc XAdTree_DeleteColumnAll*(hAdapter: HXCGUI) {.cdecl,
    importc: "XAdTree_DeleteColumnAll", dynlib: xcgui, discardable.}

proc XAdMap_Create*(): HXCGUI {.cdecl, importc: "XAdMap_Create", dynlib: xcgui, discardable.}

proc XAdMap_AddItemText*(hAdapter: HXCGUI; pName: ptr WCHAR; pValue: ptr WCHAR): BOOL {.
    cdecl, importc: "XAdMap_AddItemText", dynlib: xcgui, discardable.}

proc XAdMap_AddItemImage*(hAdapter: HXCGUI; pName: ptr WCHAR; hImage: HIMAGE): BOOL {.
    cdecl, importc: "XAdMap_AddItemImage", dynlib: xcgui, discardable.}

proc XAdMap_DeleteItem*(hAdapter: HXCGUI; pName: ptr WCHAR): BOOL {.cdecl,
    importc: "XAdMap_DeleteItem", dynlib: xcgui, discardable.}

proc XAdMap_GetCount*(hAdapter: HXCGUI): cint {.cdecl, importc: "XAdMap_GetCount",
    dynlib: xcgui, discardable.}

proc XAdMap_GetItemText*(hAdapter: HXCGUI; pName: ptr WCHAR; pOut: ptr WCHAR;
                        nOutLen: cint): BOOL {.cdecl, importc: "XAdMap_GetItemText",
    dynlib: xcgui, discardable.}

proc XAdMap_GetItemImage*(hAdapter: HXCGUI; pName: ptr WCHAR): HIMAGE {.cdecl,
    importc: "XAdMap_GetItemImage", dynlib: xcgui, discardable.}

proc XAdMap_SetItemText*(hAdapter: HXCGUI; pName: ptr WCHAR; pValue: ptr WCHAR): BOOL {.
    cdecl, importc: "XAdMap_SetItemText", dynlib: xcgui, discardable.}

proc XAdMap_SetItemImage*(hAdapter: HXCGUI; pName: ptr WCHAR; hImage: HIMAGE): BOOL {.
    cdecl, importc: "XAdMap_SetItemImage", dynlib: xcgui, discardable.}

proc DebugPrint*(level: cint; pInfo: cstring) {.cdecl, importc: "DebugPrint",
    dynlib: xcgui, discardable.}

proc xtrace*(pFormat: cstring) {.varargs, cdecl, importc: "xtrace", dynlib: xcgui, discardable.}

proc xtracew*(pFormat: ptr WCHAR) {.varargs, cdecl, importc: "xtracew", dynlib: xcgui, discardable.}

proc XDraw_Create*(hdc: HDC): HDRAW {.cdecl, importc: "XDraw_Create", dynlib: xcgui, discardable.}
## 创建


proc XDraw_Destroy*(hDraw: HDRAW) {.cdecl, importc: "XDraw_Destroy", dynlib: xcgui, discardable.}
## 销毁


proc XDraw_SetOffset*(hDraw: HDRAW; x: cint; y: cint) {.cdecl,
    importc: "XDraw_SetOffset", dynlib: xcgui, discardable.}
## 设置坐标偏移量


proc XDraw_GetOffset*(hDraw: HDRAW; pX: ptr cint; pY: ptr cint) {.cdecl,
    importc: "XDraw_GetOffset", dynlib: xcgui, discardable.}
## 获取坐标偏移量


proc XDraw_RestoreGDIOBJ*(hDraw: HDRAW) {.cdecl, importc: "XDraw_RestoreGDIOBJ",
                                       dynlib: xcgui, discardable.}
## 还原状态,释放用户绑定的GDI对象


proc XDraw_GetHDC*(hDraw: HDRAW): HDC {.cdecl, importc: "XDraw_GetHDC", dynlib: xcgui, discardable.}

proc XDraw_SetBrushColor*(hDraw: HDRAW; color: COLORREF; alpha: BYTE = 255) {.cdecl,
    importc: "XDraw_SetBrushColor", dynlib: xcgui, discardable.}

proc XDraw_SetTextAlign*(hDraw: HDRAW; nFlag: cint) {.cdecl,
    importc: "XDraw_SetTextAlign", dynlib: xcgui, discardable.}

proc XDraw_SetTextVertical*(hDraw: HDRAW; bVertical: BOOL) {.cdecl,
    importc: "XDraw_SetTextVertical", dynlib: xcgui, discardable.}

proc XDraw_SetFontX*(hDraw: HDRAW; hFontx: HFONTX) {.cdecl, importc: "XDraw_SetFontX",
    dynlib: xcgui, discardable.}

proc XDraw_SetLineWidth*(hDraw: HDRAW; nWidth: cint) {.cdecl,
    importc: "XDraw_SetLineWidth", dynlib: xcgui, discardable.}

proc XDraw_SetBkMode*(hDraw: HDRAW; bTransparent: BOOL): cint {.cdecl,
    importc: "XDraw_SetBkMode", dynlib: xcgui, discardable.}

proc XDraw_SetClipRect*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl,
    importc: "XDraw_SetClipRect", dynlib: xcgui, discardable.}

proc XDraw_ClearClip*(hDraw: HDRAW) {.cdecl, importc: "XDraw_ClearClip", dynlib: xcgui, discardable.}

proc XDraw_EnableSmoothingMode*(hDraw: HDRAW; bEnable: BOOL) {.cdecl,
    importc: "XDraw_EnableSmoothingMode", dynlib: xcgui, discardable.}
## 启用平滑模式


proc XDraw_CreateSolidBrush*(hDraw: HDRAW; crColor: COLORREF): HBRUSH {.cdecl,
    importc: "XDraw_CreateSolidBrush", dynlib: xcgui, discardable.}

proc XDraw_CreatePen*(hDraw: HDRAW; fnPenStyle: cint; nWidth: cint; crColor: COLORREF): HPEN {.
    cdecl, importc: "XDraw_CreatePen", dynlib: xcgui, discardable.}

proc XDraw_CreateRectRgn*(hDraw: HDRAW; nLeftRect: cint; nTopRect: cint;
                         nRightRect: cint; nBottomRect: cint): HRGN {.cdecl,
    importc: "XDraw_CreateRectRgn", dynlib: xcgui, discardable.}

proc XDraw_CreateRoundRectRgn*(hDraw: HDRAW; nLeftRect: cint; nTopRect: cint;
                              nRightRect: cint; nBottomRect: cint;
                              nWidthEllipse: cint; nHeightEllipse: cint): HRGN {.
    cdecl, importc: "XDraw_CreateRoundRectRgn", dynlib: xcgui, discardable.}
